# krita-timelapse-flickering-cure

./: .gitignore  LICENSE-MIT  README.md  pyproject.toml  timelapse_flickering_cure.desktop
timelapse_flickering_cure/: __init__.py  manual.html  timelapse_flickering_cure.py
typings/: krita.pyi
