[project]
name = "timelapse_flickering_cure"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "pyqt5>=5.15.11",
    "ruff>=0.15.8",
]

[tool.uv]
package = false
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]

[tool.ruff]
target-version = "py313"
line-length = 80
preview = true
extend-exclude = ["krita.pyi"]

[tool.ty]
environment.extra-paths = ["typings"]

[tool.setuptools]
packages = []
